--- a/UserManagement/Properties/launchSettings.json
+++ b/UserManagement/Properties/launchSettings.json
@@ -9,6 +9,15 @@
     }
   },
   "profiles": {
+    "UserManagement": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "applicationUrl": "https://localhost:7230;http://localhost:5230",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
